--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -8,3 +8,9 @@
 .active {
     background-color: aqua;
 }
+
+.profile {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
